--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-  <main id="container-qr">
-    <img src="images/image-qr-code.png" alt="Image QR">
-    <article>
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <main id="container-qr" role="main">
+    <img src="images/image-qr-code.png" alt="Image QR" role="imageqr">
+    <article role="qrinfo">
+      <h1 role="titleqr">Improve your front-end skills by building projects</h1>
+      <p role="qrtextcontent">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </article>
   </main>  
 </body>
